2008-04-22  Bastien Nocera  <hadess@hadess.net>

	* data/dav_user_2.2.conf.in: Patch from Thorsten Vollmer
	<thorsten@thvo.de> to make the httpd configuration file support
	multiple Apache MPMs (Closes: #526621)

2008-04-15  Baptiste Mille-Mathias <baptiste.millemathias@gmail.com>

	* data/dav_user_2.0.conf:
	* data/dav_user_2.2.conf.in:
	* src/file-share-properties.c (write_out_password):
	* src/http.c (ensure_conf_dir), (spawn_httpd):
	* src/user_share.c (migrate_old_configuration), (main):
	move the configuration to Freedesktop
	compliant location (Closes: #519058)

=== gnome-user-share 0.31 ===

2008-04-07  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.31

2008-04-04  Bastien Nocera  <hadess@hadess.net>

	* src/obexpush.c (obexpush_init): And the same thing in ObexPush

2008-04-04  Matthias Clasen  <mclasen@redhat.com>

	* src/obexftp.c: Don't exit when dbus goes away.

2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/user_share.c (main): Revert, you can't catch SIGKILL (duh!)

2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/user_share.c (main): Handle SIGKILL as well

2008-03-31  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Don't ship dav_user_2.2.conf in the tarball,
	spotted by Thorsten Vollmer <thorsten@thvo.de> (Closes: #525372)

=== gnome-user-share 0.30 ===

2008-03-31  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.30

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/user_share.c (main): Use the GTK+ main loop, not our own,
	re-use the X Display opened by GTK+ for ourselves, rather than opening
	a different one, fixes httpd children not getting killed properly
	when exiting the session (Closes: #519804)

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* data/dav_user_2.2.conf.in: Allow users and distributions
	to change the default location for HTTPD modules with